--- a/apps/readarr/Dockerfile
+++ b/apps/readarr/Dockerfile
@@ -1,4 +1,5 @@
-ARG VERSIONFROM ghcr.io/elfhosted/alpine:rolling@sha256:2fbe8a2a4806efd76d40a31891112fac02b061b6ac98a6d4377c88c89f2577ce 
+ARG VERSION
+FROM ghcr.io/elfhosted/alpine:rolling@sha256:2fbe8a2a4806efd76d40a31891112fac02b061b6ac98a6d4377c88c89f2577ce 
 
 ARG TARGETPLATFORM
 ARG VERSION
