--- a/apps/stremio-rating-addon/Dockerfile
+++ b/apps/stremio-rating-addon/Dockerfile
@@ -12,7 +12,6 @@ RUN git clone  -b $CHANNEL https://github.com/hexdecimal16/stremio-rating-addon.
 # Use the official Node.js image as the base image
 FROM node:18
 
-USER 568
 # Set the working directory inside the container
 WORKDIR /usr/src/app
 
@@ -28,5 +27,6 @@ COPY --from=cloner /source/. .
 # Expose the port that the app runs on
 EXPOSE 3000
 
+USER 568 # run as non-root
 # Command to run the application
 CMD ["npm", "start"]
