--- a/apps/librespeed/ci/goss.yaml
+++ b/apps/librespeed/ci/goss.yaml
@@ -1,16 +1,16 @@
 ---
 # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#process
 process:
-  apache2:
+  httpd:
     running: true
 
 # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#port
 port:
   # https://github.com/aelsabbahy/goss/issues/149
-  tcp:8000:
+  tcp:80:
     listening: true
 
 # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#http
 http:
-  http://localhost:8000:
+  http://localhost:80:
     status: 200
