add session support
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/librespeed/Dockerfile
+++ b/apps/librespeed/Dockerfile
@@ -3,4 +3,5 @@ FROM ghcr.io/librespeed/speedtest:latest-alpine
 
 # Install psql extension
 RUN apk add --quiet --no-cache \
-    php83-pdo_pgsql
+    php83-pdo_pgsql \
+    php83-session
