--- a/apps/librespeed/ci/goss.yaml
+++ b/apps/librespeed/ci/goss.yaml
@@ -1,8 +1,8 @@
 ---
 # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#process
-process:
-  httpd:
-    running: true
+# process:
+#   httpd:
+#     running: true
 
 # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#http
 http:
