--- a/apps/formulio/Dockerfile
+++ b/apps/formulio/Dockerfile
@@ -11,8 +11,8 @@ RUN git clone  https://github.com/TheRaceDirector/formuliodev.git /source
 
 # Add ElfHosted branding
 COPY apps/formulio/branding/index.html /source/static/
-COPY apps/formulio/branding/elfhosted-branding.patch /source/
-RUN cd /source && git apply elfhosted-branding.patch && rm elfhosted-branding.patch
+COPY apps/formulio/branding/hayduk-branding.patch /source/
+RUN cd /source && git apply hayduk-branding.patch && rm hayduk-branding.patch
 
 # Build stage
 FROM python:3.10.14-slim-bookworm AS builder
