--- a/apps/zilean/Dockerfile
+++ b/apps/zilean/Dockerfile
@@ -10,26 +10,23 @@ RUN apk update && apk upgrade && \
 RUN git clone https://github.com/iPromKnight/zilean.git /source
 
 # Build Stage
-FROM --platform=$BUILDPLATFORM mcr.microsoft.com/dotnet/sdk:8.0-alpine3.19 AS build
+FROM --platform=$BUILDPLATFORM mcr.microsoft.com/dotnet/sdk:8.0-alpine3.19 AS base
 ARG TARGETARCH
 WORKDIR /build
 COPY --from=cloner /source/. .
+RUN dotnet restore -a $TARGETARCH
 WORKDIR /build/src/Zilean.ApiService
-RUN dotnet restore -a $TARGETARCH
-RUN dotnet publish -c Release --no-restore -o /build/out -a $TARGETARCH
+RUN dotnet publish -c Release --no-restore -a $TARGETARCH -o /app/out
 WORKDIR /build/src/Zilean.DmmScraper
-RUN dotnet restore -a $TARGETARCH
-RUN dotnet publish -c Release --no-restore -o /build/out -a $TARGETARCH
+RUN dotnet publish -c Release --no-restore -a $TARGETARCH -o /app/out
 
 # Run Stage
 FROM mcr.microsoft.com/dotnet/aspnet:8.0-alpine3.19
-
-RUN apk add --update --no-cache  \
-    python3=~3.11.9-r0 \
-    py3-pip \
-    curl \
+RUN apk add --update --no-cache \
+    python3=3.11.9-r1 \
+    py3-pip=23.3.1-r0 \
+    curl=8.9.1-r0 \
     && ln -sf python3 /usr/bin/python
-
 ENV DOTNET_RUNNING_IN_CONTAINER=true
 ENV DOTNET_gcServer=1
 ENV DOTNET_GCDynamicAdaptationMode=1
@@ -40,9 +37,10 @@ ENV ASPNETCORE_URLS=http://+:8181
 
 WORKDIR /app
 VOLUME /app/data
-COPY --from=build /build/out .
-COPY --from=build /build/requirements.txt .
+COPY --from=base /app/out .
+COPY --from=base /build/requirements.txt .
 RUN rm -rf /app/python || true && \
     mkdir -p /app/python || true
 RUN pip3 install -r /app/requirements.txt -t /app/python
+
 ENTRYPOINT ["./zilean-api"]
