--- a/apps/decluttarr/restricted.tmux.conf
+++ b/apps/decluttarr/restricted.tmux.conf
@@ -1,5 +1,5 @@
 # Always launch PD
-set -g default-command "/imagemaid.sh"
+set -g default-command "/decluttarr.sh"
 
 # "lock down" tmux
 unbind C-b
