--- a/apps/filebrowser/Dockerfile
+++ b/apps/filebrowser/Dockerfile
@@ -67,6 +67,7 @@ RUN cp -p /bin/bash /bin/vstat
 # Run elfie in rbash
 RUN usermod -s /bin/rbash elfie && \
     mkdir -p /storage/config/plextraktsync && \
+    mkdir -p /home/elfie/ && \
     ln -sf /storage/config/plextraktsync /home/elfie/.config/
 COPY --chown=568:568 apps/filebrowser/root /
 
