add s6 to rclone
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/rclone/Dockerfile
+++ b/apps/rclone/Dockerfile
@@ -11,6 +11,13 @@ ARG RCLONE_VERSION=current
 # Define working directory.
 WORKDIR /tmp
 
+# Add s6
+ADD https://github.com/just-containers/s6-overlay/releases/download/v${S6_OVERLAY_VERSION}/s6-overlay-noarch.tar.xz /tmp
+RUN tar -C / -Jxpf /tmp/s6-overlay-noarch.tar.xz
+ADD https://github.com/just-containers/s6-overlay/releases/download/v${S6_OVERLAY_VERSION}/s6-overlay-x86_64.tar.xz /tmp
+RUN tar -C / -Jxpf /tmp/s6-overlay-x86_64.tar.xz
+RUN chown -R elfie:elfie /run
+
 RUN apk add --no-cache rclone fuse3 inotify-tools
 
 RUN curl -o /tmp/rclone-rc-web-gui.zip -jkSL https://github.com/retifrav/rclone-rc-web-gui/releases/download/v0.4.0/rclone-rc-web-gui.zip \
@@ -30,4 +37,4 @@ RUN curl -o /tmp/rclone-webui-angular.zip -jkSL https://github.com/yuudi/rclone-
 # Add files.
 COPY apps/rclone/rootfs/ /
 
-ENTRYPOINT ["/rclonefm.sh"] # set on test or in child images
+ENTRYPOINT [ "/init" ]
