--- a/apps/rclone/Dockerfile
+++ b/apps/rclone/Dockerfile
@@ -8,6 +8,8 @@ ENV TZ="UTC" \
 # Define build arguments
 ARG RCLONE_VERSION=current
 
+ENV S6_OVERLAY_VERSION=3.2.0.0
+
 # Define working directory.
 WORKDIR /tmp
 
@@ -17,6 +19,8 @@ RUN tar -C / -Jxpf /tmp/s6-overlay-noarch.tar.xz
 ADD https://github.com/just-containers/s6-overlay/releases/download/v${S6_OVERLAY_VERSION}/s6-overlay-x86_64.tar.xz /tmp
 RUN tar -C / -Jxpf /tmp/s6-overlay-x86_64.tar.xz
 RUN chown -R elfie:elfie /run
+
+COPY --chown=568:568 apps/rclone/root /
 
 RUN apk add --no-cache rclone fuse3 inotify-tools
 
