--- a/apps/suggestarr/Dockerfile
+++ b/apps/suggestarr/Dockerfile
@@ -31,20 +31,6 @@ RUN apt-get update && \
 # Set the working directory for the api_service
 WORKDIR /app/api_service
 
-# Add and configure the cron job
-RUN echo "0 0 * * * curl -X POST http://localhost:5000/api/automation/force_run >> /var/log/cron.log 2>&1" > /etc/cron.d/automation-cron && \
-    chmod 0644 /etc/cron.d/automation-cron && \
-    crontab /etc/cron.d/automation-cron
-
-# Copy Supervisor configuration
-COPY apps/suggestarr/supervisord.conf /etc/supervisor/conf.d/supervisord.conf
-
-# Create log files for cron and Gunicorn
-RUN touch /var/log/cron.log /var/log/gunicorn.log /var/log/gunicorn_error.log
-
-ARG user=elfie
-RUN groupadd -g 568 $user && useradd --create-home --uid 568 --gid 568 --shell /bin/bash $user
-
 # Copy and install Python dependencies
 COPY --from=cloner /source/api_service/requirements.txt /app/api_service/
 RUN pip install --no-cache-dir -r requirements.txt
@@ -55,15 +41,23 @@ COPY --from=client-builder /app/client/dist /app/static
 # Copy the api_service source code
 COPY --from=cloner /source/api_service/ /app/api_service/
 
+# Copy Supervisor configuration
+COPY apps/suggestarr/supervisord.conf /etc/supervisor/conf.d/supervisord.conf
+
+ARG user=elfie
+RUN groupadd -g 568 $user && useradd -d /config --create-home --uid 568 --gid 568 --shell /bin/bash $user && \
+    chown elfie /app -R
+
+# Add and configure the cron job
+RUN echo "0 0 * * * curl -X POST http://localhost:5000/api/automation/force_run >> /var/log/cron.log 2>&1" > /etc/cron.d/automation-cron && \
+    chmod 0644 /etc/cron.d/automation-cron && \
+    crontab /etc/cron.d/automation-cron
+
+# Create log files for cron and Gunicorn
+RUN touch /var/log/cron.log /var/log/gunicorn.log /var/log/gunicorn_error.log
+
 # Expose the port used by Gunicorn
 EXPOSE 5000
 
-RUN touch /app/app.log && chown elfie /app/app.log
-
 # Start Supervisor to manage Gunicorn and cron
 CMD ["/usr/bin/supervisord", "-c", "/etc/supervisor/conf.d/supervisord.conf"]
-
-# # We'll run the cron separately
-# WORKDIR /app
-# CMD ["uvicorn api_service.app:asgi_app", "--host", "0.0.0.0", "--port", "5000", "--log-level", "error" ]
-
