--- a/apps/plextraktsync/restricted.tmux.conf
+++ b/apps/plextraktsync/restricted.tmux.conf
@@ -17,3 +17,6 @@ set -g terminal-overrides 'xterm*:smcup@:rmcup@'
 # resize as requested
 # set -g window-size latest
 setw -g aggressive-resize on
+
+# prepare for color in console
+set -g default-terminal "screen-256color"
