--- a/apps/plextraktsync/Dockerfile
+++ b/apps/plextraktsync/Dockerfile
@@ -15,7 +15,7 @@ COPY --chown=568:568 apps/plextraktsync/restricted.tmux.conf /
 RUN mkdir -p /home/elfie && chown -R elfie /home/elfie
 
 # Run elfie in rbash
-RUN usermod -s /bin/rbash elfie
+RUN usermod -s /bin/bash elfie
 
 USER 568
 # We need plextraktsync
