can't goss-test jellyseerr since it requires postgresql
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/jellystat/ci/goss.yaml
+++ b/apps/jellystat/ci/goss.yaml
@@ -11,7 +11,7 @@ port:
     listening: true
 
 # https://github.com/aelsabbahy/goss/blob/master/docs/manual.md#http
-# http:
-#   http://localhost:3000:
-#     status: 200
-#     timeout: 5000
+http:
+  http://localhost:3000:
+    status: 200
+    timeout: 5000
