--- a/apps/calibre-web-automated/Dockerfile
+++ b/apps/calibre-web-automated/Dockerfile
@@ -210,8 +210,15 @@ RUN \
 # add unrar
 COPY --from=unrar /usr/bin/unrar-ubuntu /usr/bin/unrar
 
+# In ElfHosted, we can only mount a single config volume to the container, which presents a problem for 
+# CWA's volumes. This is a dirty workaround to avoid surprising the user..
+
+RUN mkdir /config/calibre-library && \
+    mkdir /config/cwa-book-ingest && \
+    ln -s /config/* /
+
 # ports and volumes
 EXPOSE 8083
 VOLUME /config
-VOLUME /cwa-book-ingest
-VOLUME /calibre-library
+# VOLUME /cwa-book-ingest
+# VOLUME /calibre-library
