--- a/apps/calibre-web-automated/Dockerfile
+++ b/apps/calibre-web-automated/Dockerfile
@@ -213,8 +213,8 @@ COPY --from=unrar /usr/bin/unrar-ubuntu /usr/bin/unrar
 # In ElfHosted, we can only mount a single config volume to the container, which presents a problem for 
 # CWA's volumes. This is a dirty workaround to avoid surprising the user..
 
-RUN rm -rf /config/calibre-library && \
-    rm -rf /config/cwa-book-ingest && \
+RUN rm -rf /calibre-library && \
+    rm -rf /cwa-book-ingest && \
     mkdir /config/calibre-library && \
     mkdir /config/cwa-book-ingest && \
     ln -s /config/* /
