--- a/apps/zilean/Dockerfile
+++ b/apps/zilean/Dockerfile
@@ -10,7 +10,7 @@ RUN apk update && apk upgrade && \
 RUN git clone https://github.com/iPromKnight/zilean.git /source
 
 # Build Stage
-FROM --platform=$BUILDPLATFORM mcr.microsoft.com/dotnet/sdk:8.0-alpine3.19 AS base
+FROM --platform=$BUILDPLATFORM mcr.microsoft.com/dotnet/sdk:9.0-alpine AS base
 ARG TARGETARCH
 WORKDIR /build
 COPY --from=cloner /source/. .
@@ -21,16 +21,18 @@ WORKDIR /build/src/Zilean.DmmScraper
 RUN dotnet publish -c Release --no-restore -a $TARGETARCH -o /app/out
 
 # Run Stage
-FROM mcr.microsoft.com/dotnet/aspnet:8.0-alpine3.19
+FROM mcr.microsoft.com/dotnet/aspnet:9.0-alpine
+RUN echo "https://dl-cdn.alpinelinux.org/alpine/v3.18/main" > /etc/apk/repositories && \
+    echo "https://dl-cdn.alpinelinux.org/alpine/v3.18/community" >> /etc/apk/repositories && \
+    apk update
 RUN apk add --update --no-cache \
-    python3  \
-    py3-pip  \
-    curl \
+    python3=~3.11 \
+    py3-pip=~23.1 \
+    curl=~8.9 \
+    icu-libs \
     && ln -sf python3 /usr/bin/python
 ENV DOTNET_RUNNING_IN_CONTAINER=true
-ENV DOTNET_gcServer=1
-ENV DOTNET_GCDynamicAdaptationMode=1
-ENV DOTNET_SYSTEM_GLOBALIZATION_INVARIANT=true
+ENV DOTNET_SYSTEM_GLOBALIZATION_INVARIANT=false
 ENV PYTHONUNBUFFERED=1
 ENV ZILEAN_PYTHON_PYLIB=/usr/lib/libpython3.11.so.1.0
 ENV ASPNETCORE_URLS=http://+:8181
