--- a/apps/rdtclient/Dockerfile
+++ b/apps/rdtclient/Dockerfile
@@ -22,7 +22,7 @@ RUN \
 RUN ls -FCla /appclient/root
 
 # Stage 2 - Build the backend
-FROM mcr.microsoft.com/dotnet/sdk:8.0-bookworm-slim-amd64 AS dotnet-build-env
+FROM mcr.microsoft.com/dotnet/sdk:9.0-bookworm-slim-amd64 AS dotnet-build-env
 ARG TARGETPLATFORM
 ENV TARGETPLATFORM=${TARGETPLATFORM:-linux/amd64}
 ARG BUILDPLATFORM
@@ -36,20 +36,20 @@ RUN \
    git clone https://github.com/rogerfar/rdt-client.git . && \
    echo "**** Building Source Code for $TARGETPLATFORM on $BUILDPLATFORM ****" && \
    cd server && \
-   if [ "$TARGETPLATFORM" = "linux/arm/v7" ] ; then \
-      echo "**** Building $TARGETPLATFORM arm v7 version" && \
-      dotnet restore --no-cache -r linux-arm RdtClient.sln && dotnet publish --no-restore -r linux-arm -c Release -o out ; \
-   elif [ "$TARGETPLATFORM" = "linux/arm/v8" ] ; then \
-      echo "**** Building $TARGETPLATFORM arm v8 version" && \
-      dotnet restore --no-cache -r linux-arm64 RdtClient.sln && dotnet publish --no-restore -r linux-arm64 -c Release -o out ; \
-   else \
-      echo "**** Building $TARGETPLATFORM x64 version" && \
-      dotnet restore --no-cache RdtClient.sln && dotnet publish --no-restore -c Release -o out ; \
-   fi
+   dotnet restore --no-cache RdtClient.sln && dotnet publish --no-restore -c Release -o out ; 
 
 # Stage 3 - Build runtime image
-# FROM ghcr.io/linuxserver/baseimage-alpine:3.17
 FROM ghcr.io/elfhosted/alpine:rolling@sha256:672b59dc4580b8aaae42e839c878501109ed7a810072c872363250930899bf16 
+ARG TARGETPLATFORM
+ENV TARGETPLATFORM=${TARGETPLATFORM:-linux/amd64}
+ARG BUILDPLATFORM
+ENV BUILDPLATFORM=${BUILDPLATFORM:-linux/amd64}
+
+# set version label
+ARG BUILD_DATE
+ARG VERSION
+LABEL build_version="Linuxserver.io extended version:- ${VERSION} Build-date:- ${BUILD_DATE}"
+LABEL maintainer="ravensorb"
 
 # set environment variables
 ARG DEBIAN_FRONTEND="noninteractive"
@@ -57,24 +57,24 @@ ENV XDG_CONFIG_HOME="/config/xdg"
 ENV RDTCLIENT_BRANCH="main"
 
 RUN \
-    mkdir -p /storage /config || true && \
-    echo "**** Updating package information ****" && \
-    apk update && \
-    echo "**** Install pre-reqs ****" && \
-    apk add bash icu-libs krb5-libs libgcc libintl libstdc++ zlib && \
-    echo "**** Installing dotnet ****" && \
-	mkdir -p /usr/share/dotnet
+   mkdir -p /storage /config || true && \
+   echo "**** Updating package information ****" && \
+   apk update && \
+   echo "**** Install pre-reqs ****" && \
+   apk add bash icu-libs krb5-libs libgcc libintl libssl3 libstdc++ zlib && \
+   echo "**** Installing dotnet ****" && \
+   mkdir -p /usr/share/dotnet
 
 RUN \
    if [ "$TARGETPLATFORM" = "linux/arm/v7" ] ; then \
-      wget https://download.visualstudio.microsoft.com/download/pr/c3bf3103-efdb-42e0-af55-bbf861a4215b/dc22eda8877933b8c6569e3823f18d21/aspnetcore-runtime-8.0.0-linux-musl-arm64.tar.gz && \
-      tar zxf aspnetcore-runtime-8.0.0-linux-musl-arm64.tar.gz -C /usr/share/dotnet ; \
-   elif [ "$TARGETPLATFORM" = "linux/arm/v8" ] ; then \
-      wget https://download.visualstudio.microsoft.com/download/pr/c3bf3103-efdb-42e0-af55-bbf861a4215b/dc22eda8877933b8c6569e3823f18d21/aspnetcore-runtime-8.0.0-linux-musl-arm64.tar.gz && \
-      tar zxf aspnetcore-runtime-8.0.0-linux-musl-arm64.tar.gz -C /usr/share/dotnet ; \
+   wget https://download.visualstudio.microsoft.com/download/pr/59a041e1-921e-405e-8092-95333f80f9ca/63e83e3feb70e05ca05ed5db3c579be2/aspnetcore-runtime-9.0.0-linux-musl-arm.tar.gz && \
+   tar zxf aspnetcore-runtime-9.0.0-linux-musl-arm.tar.gz -C /usr/share/dotnet ; \
+   elif [ "$TARGETPLATFORM" = "linux/arm64" ] ; then \
+   wget https://download.visualstudio.microsoft.com/download/pr/e137f557-83cb-4f55-b1c8-e5f59ccd3cba/b8ba6f2ab96d0961757b71b00c201f31/aspnetcore-runtime-9.0.0-linux-musl-arm64.tar.gz && \
+   tar zxf aspnetcore-runtime-9.0.0-linux-musl-arm64.tar.gz -C /usr/share/dotnet ; \
    else \
-      wget https://download.visualstudio.microsoft.com/download/pr/7aa33fc7-07fe-48c2-8e44-a4bfb4928535/3b96ec50970eee414895ef3a5b188bcd/aspnetcore-runtime-8.0.0-linux-musl-x64.tar.gz && \
-      tar zxf aspnetcore-runtime-8.0.0-linux-musl-x64.tar.gz -C /usr/share/dotnet ; \
+   wget https://download.visualstudio.microsoft.com/download/pr/86d7a513-fe71-4f37-b9ec-fdcf5566cce8/e72574fc82d7496c73a61f411d967d8e/aspnetcore-runtime-9.0.0-linux-musl-x64.tar.gz && \
+   tar zxf aspnetcore-runtime-9.0.0-linux-musl-x64.tar.gz -C /usr/share/dotnet ; \
    fi
 	
 RUN rm -rf \
