add BUILD_VERSION var
Signed-off-by: David Young <davidy@funkypenguin.co.nz>

--- a/apps/comet/Dockerfile
+++ b/apps/comet/Dockerfile
@@ -17,6 +17,9 @@ LABEL name="Comet" \
       description="Stremio's fastest torrent/debrid search add-on." \
       url="https://github.com/g0ldyy/comet"
 
+ARG BUILD_VERSION=UNKNOWN
+ENV BUILD_VERSION=${VERSION}
+
 WORKDIR /app
 
 
