--- a/apps/zilean/Dockerfile
+++ b/apps/zilean/Dockerfile
@@ -7,7 +7,7 @@ ARG VERSION
 RUN apk update && apk upgrade && \
     apk add --no-cache git
 
-RUN git clone https://github.com/iPromKnight/zilean.git /source
+RUN git clone -b $VERSION  https://github.com/iPromKnight/zilean.git /source
 
 # Build Stage
 FROM --platform=$BUILDPLATFORM mcr.microsoft.com/dotnet/sdk:9.0-alpine AS base
