--- a/apps/stremthru/Dockerfile
+++ b/apps/stremthru/Dockerfile
@@ -32,6 +32,7 @@ COPY --from=builder /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/
 COPY --from=builder /workspace/stremthru ./stremthru
 
 COPY --from=cloner /source/scripts/schema.sh /scripts/
+COPY --from=cloner /source/schema.hcl /
 
 EXPOSE 8080
 
