--- a/apps/stremthru/Dockerfile
+++ b/apps/stremthru/Dockerfile
@@ -15,24 +15,27 @@ WORKDIR /workspace
 
 COPY --from=cloner /source/go.mod /source/go.sum ./
 RUN go mod download
+RUN mkdir -p /schema
 
 COPY --from=cloner /source/core ./core
 COPY --from=cloner /source/internal ./internal
 COPY --from=cloner /source/store ./store
 COPY --from=cloner /source/*.go ./
+COPY --from=cloner /source/schema.hcl source/schema.postgres.hcl /schema
 
-RUN CGO_ENABLED=1 GOOS=linux go build -o ./stremthru -a -ldflags '-linkmode external -extldflags "-static"'
+RUN CGO_ENABLED=1 GOOS=linux go build -tags 'heavy' -o ./stremthru -a -ldflags '-linkmode external -extldflags "-static"'
 
-FROM ghcr.io/elfhosted/alpine:rolling@sha256:672b59dc4580b8aaae42e839c878501109ed7a810072c872363250930899bf16 
 
+FROM scratch
 
 WORKDIR /app
 
 COPY --from=builder /etc/ssl/certs/ca-certificates.crt /etc/ssl/certs/
 COPY --from=builder /workspace/stremthru ./stremthru
 
-COPY --from=cloner /source/scripts/schema.sh /scripts/
-COPY --from=cloner /source/schema.hcl /app/
+COPY --from=builder /schema /tmp
+COPY --from=arigaio/atlas:0.29.0-community /atlas /usr/local/bin/atlas
+
 
 EXPOSE 8080
 
