--- a/apps/flixio-api/Dockerfile
+++ b/apps/flixio-api/Dockerfile
@@ -6,7 +6,7 @@ ARG VERSION
 RUN apk update && apk upgrade && \
     apk add --no-cache git
 
-RUN git clone -b $VERSION  https://github.com/iPromKnight/flixio-api.git /source
+RUN git clone https://github.com/iPromKnight/flixio-api.git /source
 
 # Build Stage
 FROM --platform=$BUILDPLATFORM mcr.microsoft.com/dotnet/sdk:9.0-alpine AS base
